test/tools/javac/annotations/annotationsInComments/Test06.out
Test06.java:10:5: compiler.err.cant.resolve: kindname.class, Unknown, , 
1 error